--- a/predicthouse.ipynb
+++ b/predicthouse.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prediksi Harga Rumah\n",
+    "## Nama : Daiyan Akbar Setiyadi\n",
+    "## NIM  : A11.2022.14707"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment\n",
+    "### Bahasa Pemrograman: Python\n",
+    "### Library: Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn\n",
+    "### Dataset: Dataset properti yang mencakup fitur-fitur seperti luas tanah, jumlah kamar, lokasi, dll."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 239,
    "metadata": {},
@@ -151,6 +170,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 242,
    "metadata": {},
@@ -172,12 +198,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Membagi data train dan data test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tahap Implementasi"
    ]
   },
   {
